--- a/css/main.css
+++ b/css/main.css
@@ -473,7 +473,7 @@ body {
 }
 
 .group-list {
-  flex-basis: 300px;
+  flex-basis: 325px;
   padding: 15px;
   border-right: 1px solid #e4e4e4;
   max-height: 100vh;
@@ -513,7 +513,7 @@ body {
 
 .group-list .list {
   margin-top: 15px;
-  max-height: calc(100vh - 123px);
+  height: calc(100vh - 123px);
   overflow: scroll;
 }
 
@@ -544,8 +544,10 @@ body {
 
 .group-list .list .group .info .content-msg {
   min-width: 1em;
-  max-width: 5em;
+  width: 5em;
   display: inline-block;
+  overflow: hidden;
+  word-break: keep-all;
 }
 
 .group-list .list .group .info p {
@@ -570,9 +572,19 @@ body {
 }
 
 .chat-box .header {
+  display: flex;
+  justify-content: space-between;
   min-height: 71px;
   padding: 15px;
   border-bottom: 1px solid #e4e4e4;
+}
+
+.chat-box .header button {
+  padding: 10px;
+  background: #4158d0;
+  color: white;
+  font-size: 1em;
+  border-radius: 5%;
 }
 
 .chat-box .header .info {
@@ -591,7 +603,7 @@ body {
 }
 
 .chat-box .list {
-  padding: 30px 15px;
+  padding: 40px 15px;
   height: calc(100vh - 71px);
   overflow: scroll;
 }
