--- a/css/main.css
+++ b/css/main.css
@@ -482,6 +482,7 @@ body {
 .group-list .header {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   border-bottom: 1px solid #e4e4e4;
   padding-bottom: 15px;
   margin-bottom: 15px;
@@ -667,4 +668,21 @@ body {
   font-size: 14px;
   font-weight: 300;
   width: 100%;
+}
+#list-users .alert {
+  width: 4em;
+  height: 1.75em;
+  padding: 2px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-right: 2px;
+}
+
+#list-users .alert strong {
+  font-size: 10px;
+}
+
+#list-users button {
+  font-size: 1em;
 }
